Added lecture exception handling and lecture users limitation